--- a/ProyectoDesarrollo/src/Vista/Coordinador/PanelCohorte.form
+++ b/ProyectoDesarrollo/src/Vista/Coordinador/PanelCohorte.form
@@ -371,17 +371,23 @@
             <Component class="javax.swing.JTable" name="jTableLeaderTeacher">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="0">
+                  <Table columnCount="6" rowCount="0">
                     <Column editable="false" title="Cedula" type="java.lang.String"/>
                     <Column editable="false" title="Nombres" type="java.lang.String"/>
                     <Column editable="false" title="Apellidos" type="java.lang.String"/>
                     <Column editable="false" title="Email" type="java.lang.String"/>
+                    <Column editable="false" title="Codigo" type="java.lang.String"/>
                     <Column editable="false" title="Area" type="java.lang.String"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
