--- a/ProyectoDesarrollo/src/Vista/Administrador/PanelCursoUpdate.form
+++ b/ProyectoDesarrollo/src/Vista/Administrador/PanelCursoUpdate.form
@@ -114,13 +114,13 @@
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="333" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="335" max="-2" attributes="0"/>
                                   <Component id="botonLimpiarCurso" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="botonCurso" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="modificarCurso" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="226" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -152,10 +152,10 @@
                                   <Component id="labelContenido" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace pref="11" max="32767" attributes="0"/>
+                          <EmptySpace pref="17" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="modificarCurso" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="botonLimpiarCurso" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="botonCurso" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                       </Group>
@@ -200,9 +200,9 @@
                     <Property name="text" type="java.lang.String" value="Contenido"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JButton" name="botonCurso">
+                <Component class="javax.swing.JButton" name="modificarCurso">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Guardar Curso"/>
+                    <Property name="text" type="java.lang.String" value="Modificar Curso"/>
                   </Properties>
                 </Component>
                 <Container class="javax.swing.JScrollPane" name="jScrollPane2">
@@ -616,12 +616,7 @@
                 <Component class="javax.swing.JComboBox" name="comboListFasesPF">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="4">
-                        <StringItem index="0" value="Item 1"/>
-                        <StringItem index="1" value="Item 2"/>
-                        <StringItem index="2" value="Item 3"/>
-                        <StringItem index="3" value="Item 4"/>
-                      </StringArray>
+                      <StringArray count="0"/>
                     </Property>
                   </Properties>
                 </Component>
