--- a/ProyectoDesarrollo/src/Vista/Coordinador/PanelReporte.form
+++ b/ProyectoDesarrollo/src/Vista/Coordinador/PanelReporte.form
@@ -359,9 +359,9 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="8">
-                <StringItem index="0" value=""/>
-                <StringItem index="1" value="Cursos con mayor n&#xfa;mero de asistentes en el mes"/>
-                <StringItem index="2" value="item1"/>
+                <StringItem index="0" value=" "/>
+                <StringItem index="1" value="Detalle de estudiantes en un curso por departamentos"/>
+                <StringItem index="2" value="Cursos con mayor n&#xfa;mero de asistentes en el mes"/>
                 <StringItem index="3" value="item2"/>
                 <StringItem index="4" value="item3"/>
                 <StringItem index="5" value="item4"/>
