--- a/ProyectoDesarrollo/src/Vista/Administrador/PanelCursoUpdate.form
+++ b/ProyectoDesarrollo/src/Vista/Administrador/PanelCursoUpdate.form
@@ -690,24 +690,16 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="labelNomPrac" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="labelDescPrac" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace max="32767" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="labelNomPrac" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelDescPrac" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
+                                  <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                       <Component id="inputPorcentaje" alignment="0" max="32767" attributes="0"/>
                                       <Component id="jScrollPane6" alignment="0" max="32767" attributes="0"/>
                                       <Component id="inputNombPrac" alignment="0" min="-2" pref="296" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="265" max="-2" attributes="0"/>
